# OnlineChat

./: OnlineChat.sln  README.md
OnlineChat/: CMakeLists.txt  OnlineChat.vcxproj  OnlineChat.vcxproj.filters  imgui.ini
OnlineChat/source/: BaseInit.cpp  Connection.cpp  Interface.cpp  main.cpp
OnlineChat/source/include/: BaseInit.h  Connection.h  Interface.h
